Fixed text align issues with the .twitter_name class.

--- a/source/stylesheets/remark/slides.css.sass
+++ b/source/stylesheets/remark/slides.css.sass
@@ -160,6 +160,7 @@ code
 	left: 20px
 	font-weight: bold
 	opacity: 0.75
+	text-align: left
 	
 /* Include a Twitter Icon */
 @font-face 
